--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-tabs": "^3.1.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
-    "style-loader": "^1.1.4"
+    "style-loader": "^1.1.4",
+    "underscore": "^1.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
