--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tabs": "^3.1.0",
+    "react-tooltip": "^4.2.5",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
     "style-loader": "^1.1.4",
